02-infra/wave-50-repos/50-minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-operator
  annotations:
    argocd.argoproj.io/sync-wave: "50"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec: {}
