02-infra/wave-50-repos/50-minio/deployment-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio-operator
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          ports:
            - containerPort: 9000
            - containerPort: 9090
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --console-address :9090
          volumeMounts:
            - name: minio-storage
              mountPath: /data
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-storage
