02-infra/wave-50-repos/50-minio/service-console.yaml
kind: Service
apiVersion: v1
metadata:
  name: minio-console
  namespace: minio-operator
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
  selector:
    app: minio
