02-infra/wave-50-repos/50-minio/route-console.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-console
  namespace: minio-operator
spec:
  to:
    kind: Service
    name: minio-console
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
